--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h5>Test Subject ID No.:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
-        <div class="panel panel-primary">
+        <div style="color: rgb(13, 38, 85)" class = "panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
@@ -50,6 +50,7 @@
   <script src="./static/js/app.js"></script>
   <script src="./static/js/bonus.js"></script>
   <script src="samples.json"></script>
+ 
   
 </body>
 
